<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#83C5BE"
    tools:context=".Registration">

    <TextView
        android:id="@+id/Auth_textview_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/advent_pro_medium"
        android:text="@string/text_registration"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/Reg_editText_login"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:background="@drawable/edittext_rounded_corners"
        android:hint="@string/hint_login"
        android:inputType="text"
        android:maxLines="1"
        android:imeOptions="actionNext" />

    <EditText
        android:id="@+id/Reg_editText_email"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_rounded_corners"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/Reg_editText_password"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_rounded_corners"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/Reg_editText_password_check"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_rounded_corners"
        android:ems="10"
        android:hint="@string/password_check"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/Reg_button_registr"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="#02838C"
        android:textSize="18sp"
        android:text="@string/text_registration" />

    <TextView
        android:id="@+id/Reg_TextView_Auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:text="@string/text_autoriz" />

</LinearLayout>