<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#83C5BE"
    android:orientation="vertical"
    tools:context=".Auth">


    <TextView
        android:id="@+id/Auth_textview_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/advent_pro_medium"
        android:text="@string/text_autoriz"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/Auth_editText_login"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:autofillHints="login"
        android:background="@drawable/edittext_rounded_corners"
        android:ems="10"
        android:hint="@string/hint_login"
        android:inputType="textCapSentences"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/AuthEditTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:height="50dp"
        android:autofillHints="password"
        android:background="@drawable/edittext_rounded_corners"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/Auth_Button_Comein"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/button"
        android:text="@string/text_come_in" />

    <Button
        android:id="@+id/Auth_Button_registration"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:text="@string/text_authorized" />

    <Button
        android:id="@+id/Auth_Button_guest"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:text="@string/text_geus" />

</LinearLayout>